--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ h2 {
 }
 
 .hero_left_content p {
-    
+
     padding: 10px;
     color: var(--Colour-Main-Blue-400, #6F7CB2);
     font-feature-settings: 'clig' off, 'liga' off;
@@ -160,24 +160,30 @@ button {
 }
 
 #price {
-   
+
     text-align: center;
     background-image: url(./assets/img/Rectangle.png);
-    padding: 15% ;
+    padding: 15%;
     justify-content: center;
 }
 
 #price p {
     color: var(--Colour-Main-Blue-400, #6F7CB2);
-text-align: center;
-font-feature-settings: 'clig' off, 'liga' off;
-/* Regular 16 */
-font-family: Roboto;
-font-size: 16px;
-font-style: normal;
-font-weight: 400;
-line-height: 26px; /* 162.5% */
-
+    text-align: center;
+    font-feature-settings: 'clig' off, 'liga' off;
+    /* Regular 16 */
+    font-family: Roboto;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 26px;
+    /* 162.5% */
+}
+.footer_container {
+    display: flex;
+    justify-content: space-between;
+    padding: 5%;
+    align-items: center;
 
 }
 
@@ -201,9 +207,17 @@ line-height: 26px; /* 162.5% */
     padding: 10px;
 }
 
-@media only screen and (max-width: 767px) {
+#mobile_content {
+    display: none;
+}
+
+/* media query for mobile */
+@media only screen and (max-width: 480px) {
     /* Styles for small screens (e.g., smartphones) */
 
+    #hero2 {
+        flex-direction: column-reverse;
+    }
 
     #navbar {
         display: none;
@@ -220,16 +234,24 @@ line-height: 26px; /* 162.5% */
         /* Hide the mobile menu initially */
     }
 
+    #mobile_content {
+        display: block;
+    }
+
+    #herosection2 {
+        display: none;
+    }
+
     #main_section {
 
         background-image: none;
-
+        height: 0px;
     }
 
     #hero_top {
         float: left;
 
-        margin-top: 20%;
+        margin-top: 0%;
     }
 
     #hero {
@@ -239,74 +261,36 @@ line-height: 26px; /* 162.5% */
         align-items: center;
         /* Center content */
         padding: 5%;
+        margin: none;
     }
 
     .hero_left_content {
-        margin-left: 0;
-        /* Remove margin for mobile devices */
-    }
-
-    .hero_left_content h2 {
-        color: black;
+        max-width: none;
+        text-align: center;
     }
 
     .hero_left_content p {
-        padding: 10px;
-        color: var(--Colour-Main-Blue-400, #6F7CB2);
-        font-feature-settings: 'clig' off, 'liga' off;
-        font-family: Roboto;
-        font-size: 16px;
-        font-style: normal;
-        font-weight: 400;
-        line-height: 26px;
-    }
-
-    .hero_left_content button {
-        color: var(--colour-secondary-white-100-general, #FFF);
-        text-align: center;
-        font-feature-settings: 'clig' off, 'liga' off;
-        font-size: 16px;
-        font-style: normal;
-        font-weight: 500;
-        line-height: 26px;
-        background-color: black;
-        border-radius: 5%;
-        padding: 10px;
-
-    }
-
-    .hero_right_content img {
-        width: 100%;
-        /* Adjust width for mobile devices */
-        height: auto;
-        justify-content: center;
-    }
-
-    button {
-        color: white;
-        background-color: black;
-        padding-left: 5%;
-        padding-right: 5%;
-        font-family: Roboto;
-        font-size: 14px;
-        font-style: normal;
-        font-weight: 500;
-        line-height: 24px;
+        max-width: none;
+        font-weight: none;
     }
 
     #hero_top {
         display: flex;
         flex-direction: column-reverse;
         align-items: center;
-        /* Center content */
-
         justify-content: center;
-        text-align: center;
-
     }
 
     #hero_img {
         display: flex;
+    }
+
+    .footer_container {
+        display: flex;
+        justify-content: space-between;
+        padding: 5%;
+        align-items: center;
+
     }
 
 }
